k8s/prod/baileys-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baileys
  namespace: prod
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: baileys
  template:
    metadata:
      labels:
        app: baileys
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: baileys
          image: ghcr.io/kelmordigital/api-baileys-kelmor:latest
          ports:
            - containerPort: 4001
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
          readinessProbe:
            httpGet:
              path: /test/
              port: 4001
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /test/
              port: 4001
            initialDelaySeconds: 30
            periodSeconds: 20
