k8s/prod/api-04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-04
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: api-04
  ports:
    - port: 80
      targetPort: 3000
