k8s/prod/baileys-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baileys
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: baileys
  ports:
    - port: 80
      targetPort: 4001
