k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kelmor-ingress
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.kelmor.cloud
        - bays.kelmor.cloud
      secretName: kelmor-tls
  rules:
    - host: api.kelmor.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-04
                port:
                  number: 80
    - host: bays.kelmor.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: baileys
                port:
                  number: 80
